--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -2,7 +2,7 @@ name: Deploy Hugo site to Pages
 
 on:
   push:
-    branches: ["main"]  # 如果你的主分支是 master，改成 master
+    branches: ["main"]
   workflow_dispatch:
 
 permissions:
@@ -21,14 +21,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          submodules: recursive  # 如果主题是通过 submodule 引入的
+          submodules: recursive  # ← 关键！
           fetch-depth: 0
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 'latest'
-          extended: true  # 如果你用的是 Hugo Extended 版本
+          extended: true
 
       - name: Build
         run: hugo --minify
