--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -41,7 +41,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ blog.beardahe.com }}
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
