--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ pagerSize = 10
 
 [params]
 homeInfoParams = { Title = "BearDahe", Content = "记录我的随想、技术笔记与生活观察。" }
-description = "BearDahe 的个人博客，记录随想、技术与生活。"
+description = "Welcome to Dahe's Blog."
 keywords = ["BearDahe", "博客", "技术", "生活"]
 author = "Dahe"
 
