--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ pagerSize = 10
   filename = "sitemap.xml"
 
 [params]
-homeInfoParams = { Title = "BearDahe", Content = "记录我的随想、技术笔记与生活观察。" }
+homeInfoParams = { Title = "BearDahe", Content = "Welcome to Dahe's Blog." }
 description = "Welcome to Dahe's Blog."
 keywords = ["BearDahe", "博客", "技术", "生活"]
 author = "Dahe"
